# c-graph-transformer

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json
include/graph_transformer/: attention.h  block.h  ffn.h  head.h  layer_norm.h  loss.h  types.h
reference/: reference.c
scripts/: download_citeseer.py  download_mutag.py
src/: GAT.c  GCN.c  main.c
src/transformer/: attention.c  block.c  ffn.c  head.c  layer_norm.c  loss.c
